# feed-ranking-ops

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: ann_retrieval_benchmark.md  architecture.md  data_split_protocols.md  experimental_methodology.md  full_catalog_retrieval_protocol.md  learning_to_rank_protocol.md  model_card.md  model_selection_and_serving.md  monitoring_and_observability.md  offline_evaluation_protocol.md  release_checklist.md
reports/portfolio/: portfolio_summary.json  portfolio_summary.md
scripts/: generate_demo.sh  release_check.sh
src/feed_ranking_ops/: __init__.py  cli.py
src/feed_ranking_ops/data/: audit_dataset.py  layout.py  parsers.py  prepare_dataset.py  schemas.py  validate_layout.py
src/feed_ranking_ops/evaluation/: baselines.py  candidates.py  metrics.py  processed.py  protocol.py  run_baselines.py
src/feed_ranking_ops/monitoring/: diagnostics.py  generate_report.py  init.py  report.py
src/feed_ranking_ops/portfolio/: __init__.py  generate_report.py  report.py
src/feed_ranking_ops/ranking/: features.py  init.py  models.py  protocol.py  run_ltr.py  select_policy.py  selection.py
tests/: test_ann_retrieval.py  test_data_workflows.py  test_evaluation_baselines.py  test_evaluation_metrics.py  test_evaluation_processed.py  test_evaluation_workflow.py  test_faiss_backend.py  test_ltr_features.py  test_ltr_workflow.py  test_mind_parsers.py  test_monitoring.py  test_policy_selection.py  test_portfolio_release.py  test_retrieval_core.py  test_retrieval_workflow.py  test_serving_api.py  test_smoke.py
(+25 files in other folders)
