[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feed-ranking-ops"
version = "0.1.0"
description = "Two-stage personalized feed ranking system with temporal evaluation, retrieval, ranking, serving, and monitoring."
requires-python = ">=3.11"
dependencies = [
"numpy",
"pandas",
"polars",
"pyarrow",
"duckdb",
"scikit-learn",
"scipy",
"pydantic",
"pyyaml",
"fastapi>=0.115",
"uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
"httpx",
"pytest",
"ruff",
]
ann = [
"faiss-cpu>=1.8",
]

[project.scripts]
feed-ranking-ops = "feed_ranking_ops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
